2011-04-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/plugindata.h, src/document.c, src/plugins.c, src/document.h,
   plugins/geanyfunctions.h:
   Add document_compare_by_tab_order() and
   document_compare_by_tab_order_reverse() to the plugin API.
 * src/ui_uitls.c:
   Use document_compare_by_tab_order() as default compare function
   to sort the document list in the document notebook tab menu, this
   fixes the currently broken default ordering.


2011-04-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/utils.h, src/editor.c:
   Add function utils_string_replace() to replace in a fixed range.
   Remove utils_string_replace_helper() and update cursor marker code.


2011-04-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Fix snippets bug: {ob}pc{cb} replaced by '%' instead of {pc}.
   Refactor snippets_make_replacements() using geany_cursor_marker.


2011-04-13  Colomban Wendling  <colomban(at)geany(dot)org>

 * src/editor.c:
   Avoid triggering autocompletion on PHP open tags (closes #3199442).


2011-04-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Update dox for document_compare_by_display_name() with warning
   about parameter addresses.
 * src/document.h:
   Use brackets for DOC_FILENAME() macro 'doc' argument.
 * src/templates.c, src/utils.c, src/toolbar.c, src/utils.h,
   src/keyfile.c, src/filetypes.c, src/editor.c, src/symbols.c:
   Make utils_build_path() return a copy for safety.
 * src/keybindings.c:
   Fix Ctrl-Shift-[CV] keybindings to work outside the VTE.


2011-04-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Fix wrong casting of array pointers, thanks Nick.
 * src/plugindata.h, src/callbacks.c, src/document.c, src/plugins.c,
   src/document.h:
   Rename document_sort_by_display_name() into
   document_compare_by_display_name(), thanks again Nick.

