@@ -1,10 +1,18 @@
+2011-04-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/editor.c:
+   Fix multiple snippet cursor positions for Tabs + Spaces mode.
+   Simplify editor_insert_snippet() code now we use cursor marker
+   strings.
+
+
 2011-04-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/plugindata.h, src/document.c, src/plugins.c, src/document.h,
    plugins/geanyfunctions.h:
    Add document_compare_by_tab_order() and
    document_compare_by_tab_order_reverse() to the plugin API.
- * src/ui_uitls.c:
+ * src/ui_utils.c:
    Use document_compare_by_tab_order() as default compare function
    to sort the document list in the document notebook tab menu, this
    fixes the currently broken default ordering.
